--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node.js API",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon src/index.js",
+    "start": "nodemon src/index.js --ext js",
     "test": "mocha src/**/*spec.js"
   },
   "dependencies": {
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "envalid": "^6.0.1",
     "express": "^4.17.1",
+    "fs": "^0.0.1-security",
     "global": "^4.4.0",
     "joi": "^14.3.1",
     "memory-cache": "^0.2.0",
