--- a/package.json
+++ b/package.json
@@ -5,30 +5,18 @@
   "main": "src/index.js",
   "scripts": {
     "start": "nodemon src/index.js",
-    "test": "mocha src/**/*spec.js"
+    "test": "jest src/**/*test.js"
   },
   "dependencies": {
-    "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
-    "bluebird": "^3.7.2",
-    "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "envalid": "^6.0.1",
+    "dotenv": "^16.4.5",
     "express": "^4.17.1",
-    "fs": "^0.0.1-security",
-    "global": "^4.4.0",
-    "joi": "^14.3.1",
-    "memory-cache": "^0.2.0",
-    "mocha": "^7.1.2",
-    "nedb": "^1.8.0",
-    "nodemon": "^2.0.3",
-    "path": "^0.12.7",
-    "proxyquire": "^2.1.3",
-    "ramda": "^0.27.0",
-    "sinon": "^9.0.2",
-    "supertest": "^4.0.2",
-    "swagger-jsdoc": "^4.0.0"
+    "nodemon": "^2.0.3"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
